[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-beccastestplugin"
version = "0.0.0"
description = "Becca testing she can make a plugin"
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Rebecca Hirst", email = "becca@opensceincetools.org" },
  { name = "River the dog", email = "riverisagooddog@opensceincetools.org" }
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/RebeccaHirst/psychopy-beccastestplugin"
urls.repository = "https://github.com/RebeccaHirst/psychopy-beccastestplugin"
dependencies = [
  "pyserial",
  "numpy",
]
